[tool.poetry]
name = "fastapi-crud-router"
version = "0.1.0"
description = "FastApi CRUD router"
authors = ["arutyunyan <8david@inbox.ru>"]
readme = "README.md"
packages = [{include = "fastapi_crud_router"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
