[metadata]
name = facrud-router
version = 0.1.2
author = drtnn
author_email = 8david@inbox.ru
description = FastAPI CRUD Router for SQLAlchemy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drtnn/facrud-router
project_urls =
    Bug Tracker = https://github.com/drtnn/facrud-router/issues
license = Apache License 2.0
license_files =
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = facrud_router
packages =
    facrud_router
python_requires = >=3.9
install_requires =
    fastapi
    SQLAlchemy[asyncio]
    pydantic

[flake8]
exclude =
    ./git,
    __pycache__/,
    ./venv/,
    ./.venv/

filename = *.py
max-line-length = 100
extend-ignore = E203

max-complexity = 10
select = B,C,E,F,W,B9
